// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Citas Add Citas 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "03.05.2020",
      "hora": "10:30",
      "id": 1624347471218,
      "mascota": "Sam",
      "propietario": "Laura",
      "sintomas": "Fiber",
      "telefono": "333",
    },
  ],
}
`;

exports[`Citas delete Citas 1`] = `
Citas {
  "citas": Array [],
}
`;

exports[`Citas update Citas 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "03.05.2020",
      "hora": "10:30",
      "id": 1624347471218,
      "mascota": "Simon",
      "propietario": "Laura",
      "sintomas": "Fiber",
      "telefono": "333",
    },
  ],
}
`;
